--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Amplitude Tests</title>
-    <style>
-      .column {
-        display: flex;
-        flex-direction: column;
-      }
-      .row {
-        display: flex;
-        flex-direction: row;
-      }
-      .row > * {
-        margin-right: 0.25rem;
-      }
-      .column > * {
-        margin-bottom: 0.5rem;
-      }
-    </style>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Datadive Tests</title>
+  <style>
+    .column {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .row {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .row>* {
+      margin-right: 0.25rem;
+    }
+
+    .column>* {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
+
 <body>
   <div class="column">
     <div class="row">
@@ -30,9 +35,10 @@
       <a href="./snippet.html">snippet tests</a>
       <span>Run the snippet unit tests in your browser</span>
     </div>
-    <a href="amplitudejs-requirejs.html">require js</a>
-    <a href="amplitudejs-segment.html">segment </a>
-    <a href="amplitudejs.html">amplitude js</a>
+    <a href="datadivejs-requirejs.html">require js</a>
+    <a href="datadivejs-segment.html">segment </a>
+    <a href="datadivejs.html">datadive js</a>
   </div>
 </body>
+
 </html>
