--- a/test/browser/datadivejs.html
+++ b/test/browser/datadivejs.html
@@ -89,15 +89,15 @@
   }
 </script>
 <script>
-  datadive.init('a2dbce0e18dfe5f8e74493843ff5c053', null, { includeReferrer: true, includeUtm: true, includeGclid: true }, function () {
+  datadive.init('314893ff84434348b84a86fab5b3e8a9', null, {}, function () {
     alert(datadive.options.deviceId);
   });
   datadive.setVersionName('Web');
   datadive.identify(new datadive.Identify().add('photoCount', 1));
   datadive.identify(new datadive.Identify().add('photoCount', 1).set('gender', 'male').unset('karma'));
-  datadive.logEvent('pageLoad');
+  datadive.logEvent('pageLoad', { qs: window.location.search });
 
-  datadive.getInstance('app2').logEvent('log event before init');
+  /* datadive.getInstance('app2').logEvent('log event before init');
   datadive.getInstance('app2').init('1d2fe1e104eb3f07a24e94d359f70fd5', 'checkers@gmail.com', { includeReferrer: true }, function (instance) {
     alert(instance.options.deviceId);
   });
@@ -108,7 +108,7 @@
   datadive.getInstance('app3').logEvent('app3 page Load');
 
   datadive.getInstance('app4').init('1d2fe1e104eb3f07a24e94d359f70fd5', 'joe@gmail.com');
-  datadive.getInstance('app4').logEvent('app 4 page load');
+  datadive.getInstance('app4').logEvent('app 4 page load'); */
 </script>
 
 <body>
@@ -133,7 +133,9 @@
     <li><a href="javascript:datadive.clearUserProperties();">Clear all user properties</a></li>
     <li><a href="javascript:logRevenueV2();">LogRevenueV2</a></li>
     <br><br>
-    <li><a href="/test/browser/datadivejs2.html">Go to second page</a></li>
+    <li><a
+        href="/test/browser/datadivejs2.html?utm_source=google&utm_medium=blog&utm_campaign=july_launch&utm_content=WhatisUTM">Go
+        to second page</a></li>
 </body>
 
 </html>
