--- a/test/browser/datadivejs.html
+++ b/test/browser/datadivejs.html
@@ -1,141 +1,195 @@
 <html>
-<!--<script src="src/datadive-snippet.js" type="text/javascript"></script>-->
+<!-- <script src="https://cdn.datadive.ai/libs/datadive-snippet.js?v=7.3.0-min" type="text/javascript"></script> -->
 <script>
-  (function (window, document) {
-    var datadive = window.datadive || { '_q': [], '_iq': {} };
-    var as = document.createElement('script');
-    as.type = 'text/javascript';
-    as.async = true;
-    as.src = '/datadive.js';
-    as.onload = function () { if (window.datadive.runQueuedFunctions) { window.datadive.runQueuedFunctions(); } else { console.log('[Datadive] Error: could not load SDK'); } };
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(as, s);
-    function proxy(obj, fn) {
-      obj.prototype[fn] = function () {
-        this._q.push([fn].concat(Array.prototype.slice.call(arguments, 0))); return this;
-      };
-    }
-    var Identify = function () { this._q = []; return this; };
-    var identifyFuncs = ['add', 'append', 'clearAll', 'prepend', 'set', 'setOnce', 'unset'];
-    for (var i = 0; i < identifyFuncs.length; i++) { proxy(Identify, identifyFuncs[i]); }
-    datadive.Identify = Identify;
-    var Revenue = function () { this._q = []; return this; };
-    var revenueFuncs = ['setProductId', 'setQuantity', 'setPrice', 'setRevenueType', 'setEventProperties'];
-    for (var j = 0; j < revenueFuncs.length; j++) { proxy(Revenue, revenueFuncs[j]); }
-    datadive.Revenue = Revenue;
-    var funcs = ['init', 'logEvent', 'logRevenue', 'setUserId', 'setUserProperties',
-      'setOptOut', 'setVersionName', 'setDomain', 'setDeviceId',
-      'setGlobalUserProperties', 'identify', 'clearUserProperties',
-      'setGroup', 'logRevenueV2', 'regenerateDeviceId',
-      'logEventWithTimestamp', 'logEventWithGroups'];
-    function setUpProxy(instance) {
-      function proxyMain(fn) {
-        instance[fn] = function () {
-          instance._q.push([fn].concat(Array.prototype.slice.call(arguments, 0)));
-        };
+  (function (e, t) {
+    var n = e.datadive || { _q: [], _iq: {} }; var r = t.createElement("script")
+      ; r.type = "text/javascript"; r.async = true
+      ; r.src = "http://localhost:9000/datadive.js"
+      ; r.onload = function () {
+        if (e.datadive.runQueuedFunctions) {
+          e.datadive.runQueuedFunctions()
+        } else {
+          console.log("[Datadive] Error: could not load SDK")
+        }
       }
-      for (var k = 0; k < funcs.length; k++) { proxyMain(funcs[k]); }
-    }
-    setUpProxy(datadive);
-    datadive.getInstance = function (instance) {
-      instance = ((!instance || instance.length === 0) ? '$default_instance' : instance).toLowerCase();
-      if (!datadive._iq.hasOwnProperty(instance)) {
-        datadive._iq[instance] = { '_q': [] }; setUpProxy(datadive._iq[instance]);
+      ; var i = t.getElementsByTagName("script")[0]; i.parentNode.insertBefore(r, i)
+      ; function s(e, t) {
+        e.prototype[t] = function () {
+          this._q.push([t].concat(Array.prototype.slice.call(arguments, 0))); return this
+        }
       }
-      return datadive._iq[instance];
-    };
-    window.datadive = datadive;
+    var o = function () { this._q = []; return this }
+      ; var a = ["add", "append", "clearAll", "prepend", "set", "setOnce", "unset"]
+      ; for (var u = 0; u < a.length; u++) { s(o, a[u]) } n.Identify = o; var c = function () {
+        this._q = []
+          ; return this
+      }
+      ; var l = ["setProductId", "setQuantity", "setPrice", "setRevenueType", "setEventProperties"]
+      ; for (var p = 0; p < l.length; p++) { s(c, l[p]) } n.Revenue = c
+      ; var d = ["init", "logEvent", "logRevenue", "setUserId", "setUserProperties", "setOptOut", "setVersionName", "setDomain", "setDeviceId", "setGlobalUserProperties", "identify", "clearUserProperties", "setGroup", "logRevenueV2", "regenerateDeviceId", "logEventWithTimestamp", "logEventWithGroups", "setSessionId"]
+      ; function v(e) {
+        function t(t) {
+          e[t] = function () {
+            e._q.push([t].concat(Array.prototype.slice.call(arguments, 0)))
+          }
+        }
+        for (var n = 0; n < d.length; n++) { t(d[n]) }
+      } v(n); n.getInstance = function (e) {
+        e = (!e || e.length === 0 ? "$default_instance" : e).toLowerCase()
+          ; if (!n._iq.hasOwnProperty(e)) { n._iq[e] = { _q: [] }; v(n._iq[e]) } return n._iq[e]
+      }
+      ; e.datadive = n
   })(window, document);
 
 
   var setUserId = function () {
-    var userId = prompt('Input userId', 'user01');
-    datadive.setUserId(userId);
+    var userId = prompt('Input retrieved_user_id', 'test_seq_user_id');
+    datadive.getInstance().setUserId(userId);
   };
-  var setEventUploadThreshold = function () {
-    var eventUploadThreshold = parseInt(prompt('Input eventUploadThreshold', 5));
-    datadive.options.eventUploadThreshold = eventUploadThreshold;
+  var complete_signup = function () {
+    datadive.getInstance().logEvent('complete_signup');
   };
-  var logEvent = function () {
-    var event = prompt('Input event type', 'clicked');
-    datadive.logEvent(event);
+  var response_login = function () {
+    datadive.getInstance().logEvent('response_login');
   };
-  var setCity = function () {
-    var city = prompt('Input city', 'San Francisco, CA');
-    datadive.setUserProperties({ city: city });
+  var setUserProperties = function () {
+    var identify = new datadive.Identify()
+      .set('user_id', "retrieved_user_id")
+      .set('push', "user.isAgreed")
+      .set('gender', "user.gender")
+      .set('userlevel', "user.level")
+      .set('firstlogindate', "user.firstdate")
+      .set('birthday', "user.birthday");
+    datadive.getInstance().identify(identify);
   };
-  var addToPhotoCount = function () {
-    var photoCount = parseInt(prompt('Input amount to increment photo count by', '2'), 10);
-    datadive.identify(new datadive.Identify().add('photoCount', photoCount));
+  var clearUserProperties = function () {
+    datadive.getInstance().clearUserProperties();
   };
-  var clickOnLinkA = function () {
-    datadive.logEvent('Clicked on link A', null, function () { window.location = 'https://www.google.com'; });
+  var view_main = function () {
+    datadive.getInstance().logEvent('view_main');
   };
-  var setPhotoCount = function () {
-    var photoCount = parseInt(prompt('Input photo count to set', '2'), 10);
-    datadive.identify(new datadive.Identify().set('photoCount', photoCount), function () { alert('setPhotoCount!'); });
+  var view_category = function () {
+    var eventProperties = {
+      'gategory_code': 'category.id',
+      'gategory_name': 'category.name',
+    };
+    datadive.getInstance().logEvent('view_category', eventProperties);
   };
-  var setOncePhotoCount = function () {
-    var photoCount = parseInt(prompt('Input photo count to setOnce', '2'), 10);
-    datadive.identify(new datadive.Identify().setOnce('photoCount', photoCount));
+  var view_product = function () {
+    var eventProperties = {
+      'itemid': 'item.uuidString',
+      'product_name': 'item.name',
+      'price': 10000,
+      'category_code': 'item.category.id',
+      'category_name': 'item.category.name',
+      'brand_id': 'item.brand.id',
+      'brand_name': 'item.brand.name',
+      'review_count': 99, // 제품의 상품평 수
+      'review_avg_rating': 7, // 제품의 상품평 평균 평점
+    };
+    datadive.getInstance().logEvent('view_product', eventProperties);
   };
-  var logRevenue = function () {
-    datadive.logRevenue(9.99, 1, 'productA');
-  }
-  var logRevenueV2 = function () {
-    var revenue = new datadive.Revenue().setProductId('other.productId').setQuantity(15).setPrice(145.99);
-    revenue.setEventProperties({ 'city': 'Boston' });
-    datadive.logRevenueV2(revenue);
-  }
+  var click_shoppingbag_in_product = function () {
+    var eventProperties = {
+      'itemid': "String",
+      'product_name': "String",
+      'quantity': 1,
+      'price': 9000,
+      'category_code': "String",
+      'category_name': "String",
+      'brand_id': "String",
+      'brand_name': "String",
+      'review_count': 928, // 제품의 상품평 수
+      'review_avg_rating': 7.9, // 제품의 상품평 평균 평점
+    };
+    datadive.getInstance().logEvent('click_shoppingbag_in_product', eventProperties);
+  };
+  var view_userinfo = function () {
+    var products = [
+      {
+        'itemid': 'String',
+        'product_name': 'String',
+        'quantity': 2,
+        'price': 19800,
+      },
+      {
+        'itemid': 'String',
+        'product_name': 'String',
+        'quantity': 1,
+        'price': 19800,
+      }
+    ]
+    var eventProperties = {
+      'products': products,
+      'order_total_price': 59400, // "총 주문 금액. 즉, price 의 총 합 "
+      'order_total_count': 2, // "products 제품 종류 수. 즉, 배열의 길이"
+    };
+    datadive.getInstance().logEvent('view_userinfo', eventProperties);
+  };
+  var order_complete = function () {
+    var products = [
+      {
+        'itemid': 'String',
+        'product_name': 'String',
+        'quantity': 2,
+        'price': 19800,
+      },
+      {
+        'itemid': 'String',
+        'product_name': 'String',
+        'quantity': 1,
+        'price': 19800,
+      }
+    ]
+    var eventProperties = {
+      'products': products,
+      'orderserial': 'String',
+      'order_total_price': 59400, // "총 주문 금액. 즉, price 의 총 합 "
+      'order_total_count': 2, // "products 제품 종류 수. 즉, 배열의 길이"
+      'payment_total_price': 59400, // 실제 결제 총 금액
+      'payment_method': 'String', // 결제 수단
+      'delivery_fee': 2500, // 배송료
+      'total_discount': 0, // 할인 금액
+    };
+    datadive.getInstance().logEvent('order_complete', eventProperties);
+  };
+  var review_submitted = function () {
+    var eventProperties = {
+      'itemid': 'String',
+      'product_name': 'String',
+      'price': 29800,
+      'category_code': 'String',
+      'category_name': 'String',
+      'brand_id': 'String',
+      'brand_name': 'String',
+      'review_rating': 9.5,
+      'review_body': 'String',
+    };
+    datadive.getInstance().logEvent('review_submitted', eventProperties);
+  };
 </script>
 <script>
-  datadive.init('314893ff84434348b84a86fab5b3e8a9', null, {}, function () {
+  datadive.getInstance().init('314893ff84434348b84a86fab5b3e8a9', null, null, function () {
     alert(datadive.options.deviceId);
   });
-  datadive.setVersionName('Web');
-  datadive.identify(new datadive.Identify().add('photoCount', 1));
-  datadive.identify(new datadive.Identify().add('photoCount', 1).set('gender', 'male').unset('karma'));
-  datadive.logEvent('pageLoad', { qs: window.location.search });
-
-  /* datadive.getInstance('app2').logEvent('log event before init');
-  datadive.getInstance('app2').init('1d2fe1e104eb3f07a24e94d359f70fd5', 'checkers@gmail.com', { includeReferrer: true }, function (instance) {
-    alert(instance.options.deviceId);
-  });
-  datadive.getInstance('app2').identify(new datadive.Identify().set('key', 'value'));
-  datadive.getInstance('app2').logEvent('app 2 page load');
-
-  datadive.getInstance('app3').init('a2dbce0e18dfe5f8e74493843ff5c053', null, { batchEvents: true, eventUploadThreshold: 2 });
-  datadive.getInstance('app3').logEvent('app3 page Load');
-
-  datadive.getInstance('app4').init('1d2fe1e104eb3f07a24e94d359f70fd5', 'joe@gmail.com');
-  datadive.getInstance('app4').logEvent('app 4 page load'); */
+  datadive.getInstance().setVersionName('Web');
 </script>
 
 <body>
   <h3>Datadive JS Test</h3>
   <ul>
     <li><a href="javascript:setUserId();">Set user ID</a></li>
-    <li><a href="javascript:datadive.setOptOut(!datadive.options.optOut);">Toggle opt out</a></li>
-    <li><a href="javascript:logEvent();">Log event</a></li>
-    <li><a href="javascript:datadive.logEvent('clicked button', {color: 'red;', shape: 'triangle', sides: 3});">Log
-        event with event properties</a></li>
-    <li><a href="javascript:datadive.setUserProperties({age: 30, city: 'San Francisco, CA'});">Set user properties</a>
-    </li>
-    <li><a href="javascript:datadive.options.batchEvents = !datadive.options.batchEvents;">Toggle batch events</a></li>
-    <li><a href="javascript:setEventUploadThreshold();">Set event upload threshold</a></li>
-    <li><a href="javascript:clickOnLinkA();">Click on link A</a></li>
-    <br><br>Testing Identify calls<br>
-    <li><a href="javascript:addToPhotoCount();">Add to photo count</a></li>
-    <li><a href="javascript:datadive.identify(new datadive.Identify().unset('photoCount'));">Unset photo count</a></li>
-    <li><a href="javascript:setPhotoCount();">Set photo count</a></li>
-    <li><a href="javascript:setOncePhotoCount();">Set photo count once</a></li>
-    <li><a href="javascript:setCity();">Set city via setUserProperties</a></li>
-    <li><a href="javascript:datadive.clearUserProperties();">Clear all user properties</a></li>
-    <li><a href="javascript:logRevenueV2();">LogRevenueV2</a></li>
-    <br><br>
-    <li><a
-        href="/test/browser/datadivejs2.html?utm_source=google&utm_medium=blog&utm_campaign=july_launch&utm_content=WhatisUTM">Go
-        to second page</a></li>
+    <li><a href="javascript:complete_signup();">회원 가입 완료 이벤트 (Sign Up)</a></li>
+    <li><a href="javascript:response_login();">로그인 완료 이벤트 (Sign In)</a></li>
+    <li><a href="javascript:setUserProperties();">회원 정보 업데이트</a></li>
+    <li><a href="javascript:clearUserProperties();">로그아웃 완료</a></li>
+    <li><a href="javascript:view_main();">메인 화면 진입 이벤트 (Home Viewed)</a></li>
+    <li><a href="javascript:view_category();">카테고리 화면 이벤트 (Product Category Viewed)</a></li>
+    <li><a href="javascript:view_product();">제품 페이지 이벤트 (Product Detail Viewed)</a></li>
+    <li><a href="javascript:click_shoppingbag_in_product();">장바구니에 추가 (Product added to cart)</a></li>
+    <li><a href="javascript:view_userinfo();">결제 시작 이벤트 (Order started)</a></li>
+    <li><a href="javascript:order_complete();">결제 완료 이벤트 (Order Completed)</a></li>
+    <li><a href="javascript:review_submitted();">상품평 작성 이벤트 (Review submitted)</a></li>
 </body>
 
 </html>
