--- a/test/browser/datadivejs.html
+++ b/test/browser/datadivejs.html
@@ -1,10 +1,10 @@
 <html>
-<!-- <script src="https://cdn.datadive.ai/libs/datadive-snippet.js?v=7.3.0-min" type="text/javascript"></script> -->
+<script src="https://static.datadive.ai/sdk/datadive-snippet-1.3.0.min.js" type="text/javascript"></script>
 <script>
-  (function (e, t) {
+  /* (function (e, t) {
     var n = e.datadive || { _q: [], _iq: {} }; var r = t.createElement("script")
       ; r.type = "text/javascript"; r.async = true
-      ; r.src = "http://localhost:9000/datadive.js"
+      ; r.src = "/datadive.js"
       ; r.onload = function () {
         if (e.datadive.runQueuedFunctions) {
           e.datadive.runQueuedFunctions()
@@ -39,7 +39,7 @@
           ; if (!n._iq.hasOwnProperty(e)) { n._iq[e] = { _q: [] }; v(n._iq[e]) } return n._iq[e]
       }
       ; e.datadive = n
-  })(window, document);
+  })(window, document); */
 
 
   var setUserId = function () {
@@ -169,8 +169,8 @@
   };
 </script>
 <script>
-  datadive.getInstance().init('314893ff84434348b84a86fab5b3e8a9', null, null, function () {
-    alert(datadive.options.deviceId);
+  datadive.getInstance().init('314893ff84434348b84a86fab5b3e8a9', null, null, function (instance) {
+    console.log('deviceId >> ' + instance.options.deviceId);
   });
   datadive.getInstance().setVersionName('Web');
 </script>
